# goit-web-hw-10

./: .env-sample  docker-compose.yml  pyproject.toml
quotesapp/: migrate.py
quotesapp/quotes/: forms.py  models.py  urls.py  views.py
quotesapp/quotes/migrations/: 0001_initial.py  0002_alter_author_born_location.py  0003_alter_tag_name.py
quotesapp/quotes/templates/quotes/: add_author.html  add_quote.html  add_tag.html  author.html  base.html  index.html  tag_quotes.html
quotesapp/quotes/templatetags/: extract_tags.py
quotesapp/quotesapp/: settings.py  urls.py
quotesapp/users/: forms.py  urls.py  views.py
quotesapp/users/templates/users/: login.html  password_reset_email.html  signup.html
