[project]
name = "goit-web-hw-10"
version = "0.1.0"
description = ""
authors = [
    {name = "Mykhailo Popudniak",email = "dev.miquella@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "django (>=5.2,<6.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "mongoengine (>=0.29.1,<0.30.0)",
    "django-environ (>=0.12.0,<0.13.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
